log

Fri Mar 11 20:39:23 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c3d4507
Sun Mar 13 01:00:08 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
51bc02b
Sun Mar 13 01:01:54 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a7cecac
Sun Mar 13 01:20:36 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4d416e9
Sun Mar 13 01:23:30 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
49b12eb
Sun Mar 13 01:24:47 HSP 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|7
total_score: 0/70
815a329
Sun Mar 13 01:28:19 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
aa05c2e
Sun Mar 13 01:29:48 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c = (a+b);
      ^
cc1.exe: all warnings being treated as errors
Compilation failed
844a530
Sun Mar 13 01:30:23 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
032dbf3
Sun Mar 13 02:20:01 HSP 2022: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:49:11: error: implicit declaration of function 'SumaN' [-Werror=implicit-function-declaration]
    *suma= SumaN(a[], m);
           ^~~~~
exercises.c:49:19: error: expected expression before ']' token
    *suma= SumaN(a[], m);
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
f52ee6b
Sun Mar 13 02:21:40 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:49:11: error: implicit declaration of function 'SumaN' [-Werror=implicit-function-declaration]
    *suma= SumaN(a[UltNum], m);
           ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ee679fe
Sun Mar 13 02:22:02 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:49:17: error: passing argument 1 of 'sumaN' makes pointer from integer without a cast [-Werror=int-conversion]
    *suma= sumaN(a[UltNum], m);
                 ^
exercises.c:22:5: note: expected 'int *' but argument is of type 'int'
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
cf9091b
Sun Mar 13 02:23:17 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:42:8: error: unused variable 'UltNum' [-Werror=unused-variable]
    int UltNum = n-m;
        ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5e1da76
Sun Mar 13 02:23:33 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
2ef736a
Sun Mar 13 02:25:23 HSP 2022: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|6
total_score: 10/70
3773c7d
Sun Mar 13 02:26:45 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
554248e
Sun Mar 13 02:27:42 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
5518e14
Sun Mar 13 02:28:13 HSP 2022: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
d84d3f3
Sun Mar 13 02:41:49 HSP 2022: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:69:13: error: redefinition of 'nueva'
    Persona *nueva = (Persona*) malloc(sizeof(Persona*));
             ^~~~~
exercises.c:68:13: note: previous definition of 'nueva' was here
    Persona *nueva = NULL;
             ^~~~~
Compilation failed
4d00359
Sun Mar 13 02:42:10 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:69:13: error: redefinition of 'nueva'
    Persona *nueva = (Persona*) malloc(sizeof(Persona));
             ^~~~~
exercises.c:68:13: note: previous definition of 'nueva' was here
    Persona *nueva = NULL;
             ^~~~~
Compilation failed
c401564
Sun Mar 13 02:42:33 HSP 2022: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 20/70
e4a68b2
Sun Mar 13 02:44:50 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
49c5770
Sun Mar 13 02:45:32 HSP 2022: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
9d0f20b
Sun Mar 13 02:46:40 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
5393f21
Sun Mar 13 02:47:29 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
9545f02
Sun Mar 13 02:55:27 HSP 2022: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
9e9d091
Sun Mar 13 02:59:32 HSP 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:98:17: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
    nuevo->datos = (Vector*) calloc(n,sizeof(Vector));
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
61070bf
